# UniLab

./: .gitignore  IMPLEMENTATION_SUMMARY.md  LICENSE  README.md  Raport.md  Report.md  TODO.md  UniLab.sh  build_bridge.sh  debug_transpilation.py  debug_transpiled.py  print_transpiled.py  repro_routh.m  run_faulthandler.py  run_matlab.py  sample_menu.sh  sample_script.m  terminal_display.md  test_advanced_features.py  test_cos.m  test_cos_matrix.m  test_cos_noargs.m  test_crash.py  test_kmeans.py  test_kmeans_standalone.py  test_lark.py  test_matplotlib.py  test_ml.py  test_output.txt  test_overlap.py  test_parfor.m  test_samples.sh  test_thread.py
backend/: Cargo.toml  UniLab.py  Unilab.py  __main__.py  pyproject.toml  requirements.txt  run_matlab.py  unilab_server.py
backend/api/: dependencies.py  main.py  schemas.py
backend/api/routes/: compute.py  execution.py  export.py  files.py  metadata.py  sessions.py  system.py  workspace.py
backend/cli/: app.py  desktop_client.py
backend/client/: README.md  api.sh  cli.py  config.sh  console.py  test_api.sh  test_execution.sh  test_sessions.sh  utils.sh
backend/core/: core.py  engine.py  main.py  models.py  runtime.py  test_sim.py  transpiler_core.py  unilab_core.py
backend/core/engines/: base.py  octave.py  transpiler.py
backend/core/simulation/: __init__.py  engine.py
backend/docs/: CHANGES.md  Project.md  RUST_MIGRATION_PLAN.md  Report.md  TODO.md
backend/exporters/: json_exporter.py
backend/libraries/astronomy/: absolute_magnitude_calc.m  eci2ecef.m  gravitywgs84.m  parallax_distance.m
backend/libraries/chemistry/: addreaction.m  half_life_first_order.m  limiting_reactant.m  molality.m  ph_calc.m  sbiosimulate.m
backend/libraries/codegen/: codegen.m  makehdl.m
backend/unilab_cli/: Cargo.toml  unilab_cli_bin
backend/unilab_core/: Cargo.toml
backend/utils/: terminal_graphics.py  test_single.py
backend/web/: index.html
(+2006 files in other folders)
