[build-system]
requires = ["setuptools>=61.0.0", "setuptools-rust>=1.5.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "unilab"
version = "0.1.0"
description = "UniLab: Scientific Simulation & Modeling Platform (Offline Core Engine)"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
dependencies = [
    "python-dotenv",
    "sympy",
    "Pillow",
    "PyQt5>=5.15.0",
    "lark==1.3.1",
    "numpy>=1.20.0",
    "matplotlib>=3.5.0",
    "scipy>=1.10.0",
    "scikit-learn>=1.2.0",
    "pandas>=2.0.0"
]

[project.scripts]
unilab = "backend.cli.app:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["backend*"]

[[tool.setuptools-rust.ext-modules]]
target = "backend.core.unilab_rust_core"
path = "unilab_core/Cargo.toml"
binding = "PyO3"
