[package]
name = "unilab_core"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
pest = "2.7"
pest_derive = "2.7"
ndarray = { version = "0.15", features = ["serde", "rayon"] }
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
thiserror = "1.0"
pyo3 = { version = "0.23", features = ["auto-initialize"] }
numpy = "0.23"
num-complex = { version = "0.4", features = ["serde"] }
rand = "0.8"
rand_distr = "0.4"
uuid = { version = "1", features = ["v4"] }
libc = "0.2"
rayon = "1.10"
